implement basic transformer, add configs

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,8 @@ dependencies = [
     "numpy",
     "fastcore",
     "fastprogress",
-    "matplotlib"
+    "matplotlib",
+    "hydra-core",
 ]
 
 [project.urls]
