--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -4,7 +4,7 @@ random_seed: 1
 
 defaults:
     - model: base
-    - tasks: LR
+    - task: LR
     - training: base
     - _self_
 
@@ -14,7 +14,8 @@ wandb:
     name: null
     log_every_steps: 50
 
-out_dir: ./results/${tasks.task_name}/${model.family}/
+out_dir: ./results/${task.task_name}/${model.family}/${now:%Y-%m-%d_%H-%M-%S}
 
 hydra:
-    output_subdir: null
+    run:
+        dir: ${out_dir}
