--- a/configs/model/loop.yaml
+++ b/configs/model/loop.yaml
@@ -3,12 +3,14 @@ defaults:
 
 family: gpt2_loop
 n_layer: 1
+repeat_positional: true
+repeat_ln: true
 keep_n_tokens: null
 curriculum:
   loops:
     start: 15
     end: 30
     inc: 2
-    interval: 400
+    interval: 500
 n_loop_window: 15
 n_loops: ${.curriculum.loops.start}
