--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,5 +26,5 @@ Issues = "https://github.com/ssslakter/tg-rag/issues"
 
 [tool.setuptools]
 packages = ["looped_experiments"]
-
+package-data = { "looped_experiments"=["../configs/**/*"] }
 
