add custom curriculum

--- a/nbs/sidebar.yml
+++ b/nbs/sidebar.yml
@@ -4,5 +4,6 @@ website:
       - index.ipynb
       - 01_tasks.ipynb
       - 02_models.ipynb
+      - 03.1_curriculum.ipynb
       - 03_training.ipynb
       - 04_eval.ipynb
