--- a/configs/training/base.yaml
+++ b/configs/training/base.yaml
@@ -8,12 +8,14 @@ weight_decay: 0.0
 save_every_steps: 10000
 curriculum:
   dims:
-      start: 5
-      end: 20
-      inc: 1
-      interval: 5000
+    type: linear
+    start: 5
+    end: 20
+    inc: 1
+    interval: 5000
   points:
-      start: 11
-      end: 41
-      inc: 2
-      interval: 5000
+    type: linear
+    start: 11
+    end: 41
+    inc: 2
+    interval: 5000
