--- a/configs/training/loop.yaml
+++ b/configs/training/loop.yaml
@@ -3,12 +3,14 @@ defaults:
 
 curriculum:
   dims:
-      start: 5
-      end: 20
-      inc: 1
-      interval: 5000
+    type: linear
+    start: 1
+    end: 10
+    inc: 1
+    interval: 3000
   points:
-      start: 11
-      end: 41
-      inc: 2
-      interval: 5000
+    type: linear
+    start: 5
+    end: 25
+    inc: 2
+    interval: 3000
